Googlefontの読み込み

--- a/SCSS/foundation/_base.scss
+++ b/SCSS/foundation/_base.scss
@@ -14,7 +14,7 @@ body{
   font-size: 1.6rem;
   font-weight: 400;
   line-height:1.6;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   // 非表示中横スクロールバーが出ないように 
   overflow-x: hidden;
 
