--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.6;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   overflow-x: hidden;
 }
 
