--- a/SCSS/object/component/_module.scss
+++ b/SCSS/object/component/_module.scss
@@ -13,3 +13,18 @@
 .c-title-aside {
   font-size: 2.5rem;
 }
+
+.c-button-more {
+  display: block;
+  width: 60%;
+  color: $color-menu;
+  text-align: center;
+  margin: auto;
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  padding: 10px 40px;
+  @include breakpoint ( pc ) {
+    padding: 20px 0;
+  }
+}
