--- a/SCSS/object/project/_menu.scss
+++ b/SCSS/object/project/_menu.scss
@@ -2,9 +2,16 @@
   img {
     object-fit: cover;
     width: 100%;
-    @include breakpoint ( ipad-pc ) {
+    height: auto;
+    @include breakpoint ( ipad ) {
       width: 50%;
     }
+  }
+  .c-title-menu {
+    margin-bottom: 3.5rem;
+  }
+  .c-wrap-flexbox {
+    margin-bottom: 2rem;
   }
 }
 
@@ -18,8 +25,23 @@
   }
   color: #fff;
   background: $color-bg;
+  .more-link {
+    display: block;
+    width: 60%;
+    color: $color-menu;
+    text-align: center;
+    margin: auto;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    padding: 10px 40px;
+    @include breakpoint ( pc ) {
+      padding: 20px 0;
+    }
+  }
   h3 {
     font-size: 2rem;
+    margin-bottom: 3.5rem;
     @include breakpoint ( pc ) {
       font-size: 3.6rem;
     }
@@ -33,6 +55,7 @@
   }
   p {
     width: 80%;
+    margin-bottom: 4rem;
     @include breakpoint ( ipad-pc ) {
       width: 95%;
     }
