ページネーションの修正と、サーチページへの追加

--- a/SCSS/object/project/_pagination.scss
+++ b/SCSS/object/project/_pagination.scss
@@ -107,6 +107,12 @@ li.p-pagination__next {
       }
     }
   }
+  &-none {
+    display: none;
+    @include breakpoint ( ipad ) {
+      display: block;
+    }
+  }
 }
 
 li.-current {
