プロジェクト名の変更

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -35,9 +35,9 @@
 @import "object/project/_menu";
 @import "object/project/_news";
 @import "object/project/_pagination";
+@import "object/project/_post";
 @import "object/project/_pr";
 @import "object/project/_service";
-@import "object/project/_single";
 @import "object/project/_top";
 
 // utillity
