--- a/SCSS/object/component/_title.scss
+++ b/SCSS/object/component/_title.scss
@@ -68,7 +68,7 @@
     font-size: 3.6rem;
   }
 }
-.c-title-single {
+.c-title-post {
   font-size: 2.8rem;
   margin-bottom: 35px;
   @include breakpoint ( ipad ) {
