--- a/SCSS/object/component/_button.scss
+++ b/SCSS/object/component/_button.scss
@@ -1,14 +1,15 @@
 .c-button {
+  color: $color-text;
   font-size: 1.5rem;
-  line-height: 3rem;
+  line-height: 10rem;
   border: 1px solid $color-menu;
   border-radius: 20px;
   background: transparent linear-gradient(180deg, #F2EDE9 0%, #DED8D3 100%);
-  a {
-    width: 100%;
-    display: inline-block;
-    text-align: center;
-  }
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  text-align: center;
+  padding: 0;
 }
 
 .c-button-dark {
