--- a/SCSS/object/project/_post.scss
+++ b/SCSS/object/project/_post.scss
@@ -1,12 +1,11 @@
 .p-post {
   color: $color-text;
+  padding-bottom: 10rem;
   blockquote, pre {
     background: #F5F5F5;
     padding: 30px 15px;
-    margin-bottom: 30px;
     @include breakpoint ( ipad ) {
       padding: 50px;
-      margin-bottom: 60px;
     }
     p {
       margin-bottom: 30px;
@@ -36,7 +35,10 @@
   }
   > ol {
     list-style: decimal inside;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
+    @include breakpoint ( ipad ) {
+      margin-bottom: 6rem;
+    }
     ol {
       list-style: decimal inside;
       margin-left: 2rem;
@@ -44,7 +46,10 @@
   }
   > ul {
     list-style: disc inside;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
+    @include breakpoint ( ipad ) {
+      margin-bottom: 6rem;
+    }
     ul {
       margin-left: 2rem;
       li {
@@ -57,17 +62,10 @@
   }
   img {
     width: 100%;
-    margin-bottom: 30px;
-    @include breakpoint ( ipad ) {
-      margin-bottom: 60px;
-    }
+    object-fit: contain;
   }
   table {
     width: 100%;
-    margin-bottom: 30px;
-    @include breakpoint ( ipad ) {
-      margin-bottom: 60px;
-    }
     td {
       border: 1px solid #000;
       height: 80px;
@@ -76,19 +74,6 @@
       &:first-child {
         width: 40%;
       }
-    }
-  }
-  .c-button {
-    width: 100%;
-    height: 80px;
-    margin-bottom: 30px;
-    @include breakpoint ( ipad ) {
-      width: 60%;
-      height: 100px;
-      margin-bottom: 60px;
-    }
-    @include breakpoint ( pc ) {
-      width: 40%;
     }
   }
   .c-comment {
@@ -117,92 +102,54 @@
   }
 }
 
-.p-post-intro {
-  display: flex;
-  justify-content: space-between;
-  &:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-  div {
-    width: 40%;
-    img {
-      // width: 40%;
-      // padding-bottom: 61%;
-      object-fit: cover;
-    }
-  }
-  p {
-    width: 50%;
-    margin-bottom: 30px;
-    @extend .row;
-    -webkit-line-clamp: 6;
+.wp-block- {
+  &quote {
+    margin-bottom: 3rem;
     @include breakpoint ( ipad ) {
-      margin-bottom: 120px;
-      -webkit-line-clamp: 14;
-    }
-    @include breakpoint ( pc ) {
-      margin-bottom: 60px;
+      margin-bottom: 6rem;
     }
   }
-}
-
-.p-post-imageList {
-  width: 100%;
-  img {
-    width: 100%;
-    margin-bottom: 20px;
+  &media-text {
+    margin-bottom: 3rem;
     @include breakpoint ( ipad ) {
-      width: 49%;
-    }
-    @include breakpoint ( pc ) {
-      width: 33%;
+      margin-bottom: 6rem;
     }
   }
-  > img {
-    display: block;
-    width: 70%;
-    max-width: 580px;
-    margin: 0px auto 30px;
+  &image {
+    margin-bottom: 3rem;
     @include breakpoint ( ipad ) {
-      margin: 0px auto 60px;
+      margin-bottom: 6rem;
     }
   }
-  div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
-.p-post-list {
-  padding: 15px 0;
-  margin-bottom: 15px;
-  @include breakpoint ( ipad ) {
-    padding: 45px 0 45px 45px;
-  }
-  ol {
-    list-style-type: decimal;
-    list-style-position: inside;
-    // & + ol {
-    //   margin-top: 20px;
-    // }
-    ol {
-      margin-top: 20px;
-    }
-    & + ol {
-      margin-top: 20px;
+  &code {
+    margin-bottom: 3rem;
+    @include breakpoint ( ipad ) {
+      margin-bottom: 6rem;
     }
   }
-  ul {
-    ul {
-      margin-top: 20px;
-    }
-    & + ul {
-      margin-top: 20px;
+  &table {
+    margin-bottom: 3rem;
+    @include breakpoint ( ipad ) {
+      margin-bottom: 6rem;
     }
   }
-}
-
-.p-post-list-order {
-  margin-bottom: 60px;
+  &buttons {
+    .wp-block-button {
+      width: 100%;
+      @include breakpoint ( ipad ) {
+        width: 60%;
+      }
+      @include breakpoint ( pc ) {
+        width: 40%;
+      }
+      height: 10rem;
+      margin-bottom: 3rem;
+      @include breakpoint ( ipad ) {
+        margin-bottom: 6rem;
+      }
+    }
+  }
+  &button__link {
+    @extend .c-button;
+  }
 }
