固定ページのメインビジュアルの背景をダークに変更

--- a/css/style.css
+++ b/css/style.css
@@ -1309,6 +1309,19 @@ body {
   background-image: url(..//images/page_iphone.png);
   height: 225px;
   margin-bottom: 35px;
+  position: relative;
+  z-index: 10;
+}
+
+.p-hero-page::before {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
 }
 
 @media (min-width: 376px) {
