テーマチェックによる変更

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -15,6 +15,7 @@
 // component
 @import "object/component/_button";
 @import "object/component/_comment";
+@import "object/component/_module";
 @import "object/component/_title";
 @import "object/component/_wrap";
 
