--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -20,6 +20,7 @@
 @import "object/component/_wrap";
 
 // project
+@import "object/project/_bar";
 @import "object/project/_box";
 @import "object/project/_hero";
 @import "object/project/_map";
